    - Removed unneeded relationships (no upgrades over two releases are
      supported).
    - Fix Suggests for kvirc-dbg.
    - kvirc-data: Make the "Suggests: kvirc" a Recommends, doesn't make much
      sense to install the -data package without the program.
  * debian/source/local-options: Added with "unapply-patches".
  * debian/kvirc.lintian-overrides: Updated to work for 4.1.1.

  [ Raúl Sánchez Siles ]
  * Stating the right version where kvirc-data break and replace should happen.
  * Fixing link to license file.
  * Added French and Portuguese man pages.

 -- Raúl Sánchez Siles <rasasi78@gmail.com>  Mon, 13 Dec 2010 08:11:16 +0100

kvirc (4:4.0.2-1) unstable; urgency=low

  The "Leyline of the Void" release

  * New upstream release. (Closes: #590932)
    - Upstream skipped 4.0.1 as an official release.
    - debian/patches/00_upstream_patches_for_4.0.patch: Deleted.
  * debian/source/options: Added to ensure BZip2 compression.
  * debian/watch: Use "latest" directory on FTP server.
  * debian/kvirc.lintian-overrides: Updated.
  * Enable Python scripting support:
    - debian/patches/20_rm_python_stub.patch: Deleted.
    - debian/rules: Removed WITHOUT_PYTHON flag.
    - debian/control: Added python-dev to Build-Depends.

 -- Kai Wasserbäch <debian@carbon-project.org>  Mon, 02 Aug 2010 16:22:44 +0200

kvirc (4:4.0.0-3) unstable; urgency=high

  The "Sliver Queen" release.

  * Urgency high as 00_upstream_patches_for_4.0.patch fixes a serious security
      flaw in the DCC module (other, rather minor in comparison, security
      fixes are also included).  (Closes: #590745)
      Upstream-Bug: <https://svn.kvirc.de/kvirc/ticket/858>
  * debian/rules:
    - Removed override_dh_strip and added --dbg-package to the general dh
      invocation.
    - Made dh_install run parallel aware.
  * debian/patches:
    - Removed patches 00 through 04 and replaced them by a single patch
      containing all upstream bug fixes to the 4.0 branch.