@@ -6,34 +6,35 @@ Description: Don't call update-mime-database during install.
  during package installation, we can remove this snippet and thus the
  B-D on shared-mime-database.
 Author: Kai Wasserbäch <debian@carbon-project.org>
-Last-Update: 2010-05-17
+Last-Update: 2011-02-11
 Origin: vendor, http://hg.debian.org/hg/pkg-kde/kde-extras/kvirc/raw-file/tip/debian/patches/21_make_shared-mime-info_B-D_superfluous.patch
 Forwarded: not-needed
 ---
- data/mimetypes/CMakeLists.txt |   19 +------------------
- 1 file changed, 1 insertion(+), 18 deletions(-)
+ data/mimetypes/CMakeLists.txt |   22 ++--------------------
+ 1 file changed, 2 insertions(+), 20 deletions(-)
 
-Index: b/data/mimetypes/CMakeLists.txt
-===================================================================
 --- a/data/mimetypes/CMakeLists.txt
 +++ b/data/mimetypes/CMakeLists.txt
-@@ -1,18 +1 @@
+@@ -1,20 +1,2 @@
 -IF(KDE4_FOUND)
--    include(MacroEnsureVersion)
+-	INCLUDE(MacroEnsureVersion)
 -
--    macro_ensure_version("4.2.0" ${KDE_VERSION} KDE_4_2_FOUND)
+-	macro_ensure_version("4.2.0" ${KDE_VERSION} KDE_4_2_FOUND)
 -
--    # for KDE 4.2 we require at least version 0.23
--    IF(KDE_4_2_FOUND)
--        set(SHARED_MIME_INFO_MINIMUM_VERSION "0.23")
--    ENDIF(KDE_4_2_FOUND)
+-	# for KDE 4.2 we require at least version 0.23
+-	IF(KDE_4_2_FOUND)
+-		SET(SHARED_MIME_INFO_MINIMUM_VERSION "0.23")
+-	ENDIF(KDE_4_2_FOUND)
 -
--    # now to shared mime info
--    find_package(SharedMimeInfo)
+-	# now to shared mime info
+-	FIND_PACKAGE(SharedMimeInfo)
 -
--    IF(SHARED_MIME_INFO_FOUND AND IS_DIRECTORY ${XDG_MIME_INSTALL_DIR})
--        install(FILES kvirc.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
--        update_xdg_mimetypes(${XDG_MIME_INSTALL_DIR})
--    ENDIF(SHARED_MIME_INFO_FOUND AND IS_DIRECTORY ${XDG_MIME_INSTALL_DIR})
+-	IF(SHARED_MIME_INFO_FOUND AND IS_DIRECTORY ${XDG_MIME_INSTALL_DIR})
+-		INSTALL(FILES kvirc.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
+-		update_xdg_mimetypes(${XDG_MIME_INSTALL_DIR})
+-	ENDIF(SHARED_MIME_INFO_FOUND AND IS_DIRECTORY ${XDG_MIME_INSTALL_DIR})
+-
+-	INSTALL(FILES kvirc.notifyrc DESTINATION ${DATA_INSTALL_DIR}/kvirc)
 -ENDIF(KDE4_FOUND)
-+install(FILES kvirc.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
++INSTALL(FILES kvirc.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
++INSTALL(FILES kvirc.notifyrc DESTINATION ${DATA_INSTALL_DIR}/kvirc)
